--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   min-height: 100vh;
   display: grid;
   background-image: linear-gradient(45deg, #32e75f, #23a0bc);
-
+background-size:cover;
   font-family: sans-serif;
   text-align: center;
 }
