--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -1,4 +1,14 @@
-
+.weather {
+  place-self: center;
+  padding: 40px;
+  border-radius: 10px;
+  background-image: linear-gradient(45deg, #b809ed, #ed1c43);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap:wrap;
+  
+}
 .search-bar {
   display: flex;
 
