--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -7,7 +7,8 @@
   flex-direction: column;
   align-items: center;
   flex-wrap:wrap;
-  max-width:100%
+  max-width:100%;
+  over-flow:hidden;
 }
 .search-bar {
   display: flex;
